[package]
name = "ibmtts-host32"
version = "0.1.0"
edition = "2021"

[lib]
name = "ibmtts_host32"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ibmtts_exe_tester"
path = "src/main.rs"

[dependencies]
libloading = "0.8.9"

windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_System_IO", "Win32_Security", "Win32_Foundation", "Win32_System_Pipes", "Win32_System_Threading", "Win32_System_Memory", "Win32_UI_WindowsAndMessaging"] }
ctor = "0.1"
worker_macros = { path = "worker_macros" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 16
panic = "unwind"
strip = false
debug = 1