[package]
name = "ibmtts-host32"
version = "0.1.0"
edition = "2021"

[lib]
name = "ibmtts_host32"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ibmtts_exe_tester"
path = "src/main.rs"

[dependencies]
worker_macros = { path = "worker_macros" }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 16
panic = "unwind"
strip = false
debug = 1